# ai-assistant-python

./: .gitmodules  AGENTS.md  README.md  agent.py  llm_provider.py  main.py  openrouter.py  pyproject.toml
app/: agent.py  config.py  llm_provider.py  openrouter.py
app/tools/: horoscope.py  tools.py
tests/: test_agent.py
