[project]
name = "python-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "openroute>=0.0.1",
    "openrouter>=0.9.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
]

[tool.pyright]
include = ["main.py", "app"]
pythonVersion = "3.14"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
pythonpath = ["."]
